# Pilotage

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml
adapters/aviate/: Cargo.toml
adapters/aviate/src/: adapter.rs  error.rs  incarnation.rs  lib.rs  link.rs  mavlink.rs  shm.rs  uplink.rs
adapters/aviate/src/adapter/: advertisement.rs  camera.rs  control.rs  sampling.rs  shm_sampling.rs  sources.rs  startup.rs  tests.rs
adapters/aviate/src/link/: estimator.rs  measurement.rs  tests.rs
adapters/aviate/src/mavlink/: decoding.rs  tests.rs
adapters/aviate/src/shm/: tests.rs
adapters/aviate/src/uplink/: fc_replies.rs
adapters/gazebo/: Cargo.toml  build.rs
adapters/gazebo/bridge/: CMakeLists.txt
adapters/gazebo/bridge/src/: bridge_node.cpp  bridge_node.hpp  framing.cpp  framing.hpp  main.cpp
adapters/gazebo/src/: adapter.rs  bridge_client.rs  error.rs  framing.rs  lib.rs  video.rs  wire.rs
adapters/gazebo/src/adapter/: advertisement.rs  tests.rs
adapters/px4/: Cargo.toml
adapters/px4/src/: adapter.rs  config.rs  error.rs  gimbal.rs  gimbal.rs.new  lib.rs  uplink.rs
adapters/px4/src/adapter/: advertisement.rs  camera.rs  control.rs  gimbal_link_loss_tests.rs  gimbal_tests.rs  link_loss.rs  pointing.rs  sampling.rs  tests.rs
adapters/px4/src/gimbal/: tests.rs
adapters/reference-headless/: Cargo.toml
adapters/reference-headless/src/: adapter.rs  controls.rs  lib.rs  scenario.rs  skiff.rs  splitmix64.rs
adapters/reference-headless/tests/: golden_trajectory.rs  link_loss.rs  snapshot_restore.rs
clients/web-control/: Cargo.toml  golden-vectors.json  server-welcome-fixture.json  typed-frame-fixture.json
clients/web-control/src/: authority.rs  coordinator.rs  device.rs  flight.rs  golden.rs  lib.rs  plan.rs  profile.rs  quasimode.rs  runtime.rs  sample.rs  wasm.rs
clients/web-control/src/authority/: tests.rs
clients/web-control/src/device/: tests.rs  (+1 more)
clients/web-instruments/: Cargo.toml
clients/web-instruments/src/: alert_tests.rs  classify_h264.rs  decode_envelope.rs  decode_video.rs  exports.rs  lib.rs  render_status.rs  tests.rs  wire_js.rs
crates/pilotage-adapter-api/: Cargo.toml
crates/pilotage-adapter-api/calibration/: sim-fpv-verification-report.json
crates/pilotage-adapter-api/src/: calibration.rs  capability.rs  control.rs  lib.rs  step.rs  telemetry.rs  vehicle_adapter.rs  video.rs
crates/pilotage-alerts/: Cargo.toml
crates/pilotage-alerts/src/: class.rs  condition.rs  event.rs  lib.rs  manager.rs  output.rs  profile.rs
crates/pilotage-authority/: Cargo.toml
crates/pilotage-authority/src/: command.rs  effect.rs  engine.rs  lib.rs  state.rs  tests.rs  wire.rs
crates/pilotage-camera-calibration/: Cargo.toml
crates/pilotage-camera-calibration/src/: calibration.rs  lib.rs
crates/pilotage-conformance/: Cargo.toml
crates/pilotage-conformance/src/: checkpoint.rs  event.rs  fixture.rs  lib.rs  roundtrip.rs  session.rs  staleness.rs
crates/pilotage-conformance/tests/: increment_zero.rs
crates/pilotage-evidence/: Cargo.toml
crates/pilotage-evidence/src/: canonical.rs  error.rs  gate.rs  graph.rs  id.rs  impact.rs  lib.rs  node.rs  parse.rs  policy.rs  relation.rs  report.rs  scope.rs  testkit.rs  trace.rs
crates/pilotage-evidence/tests/: artifact_resolution.rs  att01.rs
crates/pilotage-geo/: Cargo.toml
crates/pilotage-geo/src/: abi.rs  availability.rs  conformal.rs  datum.rs  error.rs  identity.rs  lib.rs  taws.rs  view.rs
crates/pilotage-input/: Cargo.toml
crates/pilotage-input/registry/: generic-gamepad.json  radiomaster-pocket.json
crates/pilotage-input/src/: button_tracker.rs  digest.rs  lib.rs  logical.rs  normalize.rs  profile.rs  registry.rs  sample.rs
crates/pilotage-input/tests/: engine_golden.rs  radiomaster_pocket_capture.rs
crates/pilotage-instrument-panels/: Cargo.toml
crates/pilotage-instrument-panels/src/: annunciation.rs  fixed_str.rs  hsi.rs  lib.rs  palette.rs  pfd.rs  source_label.rs  status_paint.rs
crates/pilotage-instrument-raster/: Cargo.toml
crates/pilotage-instrument-raster/src/: curve.rs  error.rs  fixed.rs  lib.rs  paint.rs  raster.rs  report.rs  state.rs  stroke.rs  surface.rs  text.rs  timing.rs  transform.rs
crates/pilotage-instrument-state/: Cargo.toml
crates/pilotage-instrument-state/src/: abi.rs  aircraft.rs  altitude.rs  dynamics.rs  heading.rs  lib.rs  presentation.rs  quat.rs  resolve.rs  signal.rs  source_compare.rs  source_monitor.rs  units.rs  validate.rs
crates/pilotage-mavlink/: Cargo.toml
crates/pilotage-mavlink/src/: codec.rs  lib.rs  link.rs
crates/pilotage-protocol/: Cargo.toml  build.rs
crates/pilotage-protocol/src/: control.rs  convert.rs  h264.rs  ids.rs  intent.rs  lib.rs  session.rs  session_convert.rs  video_frame.rs  wire.rs
crates/pilotage-svs-build/: Cargo.toml
crates/pilotage-svs-build/src/: bundle.rs  chain.rs  config.rs  datum.rs  diff.rs  element.rs  error.rs  fixtures.rs  lib.rs  package.rs  payload.rs  provenance.rs  report.rs  source.rs  verify.rs
crates/pilotage-svs-db/: Cargo.toml
crates/pilotage-svs-db/src/: activation.rs  canonical.rs  error.rs  feature.rs  fixtures.rs  identity.rs  lib.rs  manifest.rs  merkle.rs  output.rs  tile.rs  trust.rs  verify.rs
hosts/session-host/: Cargo.toml
hosts/session-host/src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  runtime.rs  tls_identity.rs
hosts/session-host/tests/: hostile_pending_growth.rs  loopback.rs  reliable_actions_wire.rs  welcome_fixture.rs
tools/hid-probe/: Cargo.toml
tools/hid-probe/src/: capture_cmd.rs  cli.rs  decode.rs  device.rs  error.rs  list_cmd.rs  main.rs  output.rs  read_cmd.rs
tools/loopback-probe/: Cargo.toml
tools/loopback-probe/src/: capture.rs  cli.rs  control_source.rs  drive.rs  error.rs  hid_decode.rs  main.rs  metrics.rs  output.rs  pipeline.rs  receiver.rs  run.rs  save_frames.rs  sender.rs  summary.rs  synthetic.rs  telemetry.rs  transport.rs  video.rs  wire_session.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: backend.rs  cli.rs  error.rs  log_archive.rs  main.rs  output.rs  process.rs  readiness.rs  session.rs
(+567 files in other folders)
