[workspace]
resolver = "3"
members = [
    "crates/pilotage-protocol",
    "crates/pilotage-authority",
    "crates/pilotage-session",
    "crates/pilotage-input",
    "crates/pilotage-timing",
    "crates/pilotage-adapter-api",
    "crates/pilotage-conformance",
    "crates/pilotage-frames",
    "crates/pilotage-instrument-scene",
    "crates/pilotage-instrument-state",
    "crates/pilotage-instrument-glyphs",
    "crates/pilotage-instrument-panels",
    "crates/pilotage-instrument-raster",
    "adapters/reference-headless",
    "adapters/aviate",
    "tools/hid-probe",
    "tools/loopback-probe",
    "hosts/session-host",
    "adapters/gazebo",
    "clients/web-instruments",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = { version = "2.0.18", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
prost = "0.14.4"
prost-build = "0.14.4"
libm = "0.2.16"
libc = "0.2.177"
wasm-bindgen = "=0.2.126"
hidapi = "2.6.6"
proptest = "1.11.0"
tokio = "1.48.0"
wtransport = "0.7.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
pilotage-timing = { path = "crates/pilotage-timing" }
pilotage-protocol = { path = "crates/pilotage-protocol" }
pilotage-authority = { path = "crates/pilotage-authority" }
pilotage-input = { path = "crates/pilotage-input" }
pilotage-adapter-api = { path = "crates/pilotage-adapter-api" }
pilotage-frames = { path = "crates/pilotage-frames" }
pilotage-instrument-scene = { path = "crates/pilotage-instrument-scene" }
pilotage-instrument-state = { path = "crates/pilotage-instrument-state" }
pilotage-instrument-glyphs = { path = "crates/pilotage-instrument-glyphs" }
pilotage-instrument-panels = { path = "crates/pilotage-instrument-panels" }
pilotage-instrument-raster = { path = "crates/pilotage-instrument-raster" }
pilotage-adapter-reference = { path = "adapters/reference-headless" }
pilotage-adapter-gazebo = { path = "adapters/gazebo" }
pilotage-adapter-aviate = { path = "adapters/aviate" }
pilotage-session = { path = "crates/pilotage-session" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
let_underscore_must_use = "deny"
let_underscore_future = "deny"
await_holding_lock = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"
