[package]
name = "pilotage-adapter-aviate"
description = "Telemetry-only VehicleAdapter for the Aviate flight controller over its MAVLink 2.0 subset (ADR-0018)"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-adapter-api = { workspace = true }
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
