[package]
name = "pilotage-adapter-aviate"
description = "Telemetry-only VehicleAdapter for the Aviate flight controller over its MAVLink 2.0 subset (ADR-0018)"
version = "0.1.0"
edition.workspace = true
publish = false

# Not `workspace = true`: the workspace forbids unsafe_code outright,
# but the shared-memory vehicle link (ADR-0019) needs shm_open/mmap.
# This crate denies unsafe_code and allows it at the three mapped-memory
# sites in shm.rs, each with a SAFETY justification; everything else
# matches the workspace wall.
[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
let_underscore_must_use = "deny"
let_underscore_future = "deny"
await_holding_lock = "deny"
disallowed_types = "deny"
disallowed_macros = "deny"

[dependencies]
libc = { workspace = true }
pilotage-adapter-api = { workspace = true }
pilotage-adapter-gazebo = { workspace = true }
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
