[package]
name = "pilotage-adapter-px4"
description = "VehicleAdapter for PX4 over standard MAVLink 2.0: telemetry, offboard velocity control, and arming"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-adapter-api = { workspace = true }
pilotage-adapter-gazebo = { workspace = true }
pilotage-mavlink = { workspace = true }
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
