[package]
name = "pilotage-adapter-reference"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-adapter-api = { workspace = true }
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
libm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
