[package]
name = "pilotage-control-web"
description = "Rust/WASM web-control runtime: device mapping, the gimbal quasimode, flight-input masking, lease planning, and transactional profile activation for the browser viewer (ADR-0007)"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
pilotage-input = { workspace = true }
pilotage-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }
