[package]
name = "pilotage-instruments-web"
description = "WASM export of the instrument panels for the browser viewer (ADR-0017)"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
pilotage-instrument-panels = { workspace = true }
pilotage-instrument-scene = { workspace = true }
pilotage-instrument-state = { workspace = true }
wasm-bindgen = { workspace = true }
