[package]
name = "pilotage-adapter-api"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
pilotage-frames = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sha2 = "0.10.9"
