[package]
name = "pilotage-adapter-api"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
pilotage-frames = { workspace = true }
pilotage-calibration-id = { workspace = true }
# CAL-01 (#90): the camera calibration contract now lives in its own no_std
# crate; adapter-api re-exports it so consumer paths are unchanged.
pilotage-camera-calibration = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
