[package]
name = "pilotage-authority"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
