[package]
name = "pilotage-camera-calibration"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-frames = { workspace = true }
pilotage-calibration-id = { workspace = true }
libm = { workspace = true }
thiserror = { workspace = true }
sha2 = { version = "0.10.9", default-features = false }
