[package]
name = "pilotage-instrument-panels"
description = "PFD and HSI instrument panels as pure state-to-scene functions (ADR-0017)"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
libm = { workspace = true }
pilotage-instrument-scene = { workspace = true }
pilotage-instrument-state = { workspace = true }

[dev-dependencies]
pilotage-frames = { workspace = true }
