[package]
name = "pilotage-instrument-raster"
description = "Deterministic software reference rasterizer for the scene IR (ADR-0017, REN-03)"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
libm = { workspace = true }
pilotage-instrument-glyphs = { workspace = true }
thiserror = { workspace = true }
pilotage-instrument-scene = { workspace = true }

[dev-dependencies]
pilotage-instrument-panels = { workspace = true }
pilotage-instrument-state = { workspace = true }
sha2 = "0.10.9"
