[package]
name = "pilotage-instrument-state"
description = "Unified aircraft/nav state, per-signal validity, and display derivations (ADR-0017)"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-frames = { workspace = true }
libm = { workspace = true }
