[package]
name = "pilotage-mavlink"
description = "MAVLink 2.0 subset codec and receive-link machinery shared by flight-controller adapters"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-adapter-api = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
