[package]
name = "pilotage-protocol"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
pilotage-timing = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
