[package]
name = "hid-probe"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
hidapi = { workspace = true }
pilotage-input = { workspace = true }
pilotage-protocol = { workspace = true }
pilotage-timing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
