[package]
name = "xtask"
description = "Repository orchestration: one-command SITL session launch and reset (DEMO-01)"
version = "0.1.0"
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
